--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <meta charset="UTF-8">
   <script language="javascript" type="text/javascript" src="lib/p5.min.js"></script>
   <script language="javascript" src="lib/p5.dom.js"></script>
+
+  <script language="javascript" type="text/javascript" src="src/Geometry/InteractiveLine.js"></script>
   <script language="javascript" type="text/javascript" src="src/Geometry/NGon.js"></script>
   <script language="javascript" type="text/javascript" src="catseyeP5.js"></script>
   <!-- this line removes any default padding and style. you might only need one of these values set. -->
