--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <script language="javascript" type="text/javascript" src="lib/p5.js"></script>
   <script language="javascript" type="text/javascript" src="min/catseye-master-min.js"></script>
   <!-- this line removes any default padding and style. you might only need one of these values set. -->
   <style> body {padding: 0; margin: 0;} </style>
