--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <script language="javascript" type="text/javascript" src="lib/p5.js"></script>
-  <script language="javascript" type="text/javascript" src="lib/p5.dom.js"></script>
   <script language="javascript" type="text/javascript" src="min/catseye-master-min.js"></script>
+  <link rel="stylesheet" type="text/css" href="./css/catseye_gridbuilder.css">
   <!-- this line removes any default padding and style. you might only need one of these values set. -->
   <style> body {padding: 0; margin: 0;} </style>
 </head>
 
 <body>
+	<div id="canvas_container"></div>
+	<div id="controls"></div>
 	<a id="downloadAnchorElem" style="display:none"></a>
 </body>
 </html>
