--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <script language="javascript" type="text/javascript" src="min/catseye-master-min.js"></script>
+  <script language="javascript" type="text/javascript" src="catseye-grid-builder.bundle.js"></script>
   <link rel="stylesheet" type="text/css" href="./css/catseye_gridbuilder.css">
   <!-- this line removes any default padding and style. you might only need one of these values set. -->
   <style> body {padding: 0; margin: 0;} </style>
