added GUI interaction manager and integrated it with (and tested with) sliders and buttons for the grid builder

--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 
 <body>
 	<div id="canvas_container"></div>
-	<div id="controls"></div>
+	<div id="controls">
+		<label>rotation</label>
+		<input type="range" id="rotationSlider"/>
+		<label>scale</label>
+		<input type="range" id="scaleSlider"/>
+		<button id="toggleMode">toggle mode</button>
+		<button id="saveTile">save tile</button>
+	</div>
 	<a id="downloadAnchorElem" style="display:none"></a>
 </body>
 </html>
