--- a/index.html
+++ b/index.html
@@ -10,13 +10,20 @@
 <body>
 	<div id="canvas_container"></div>
 	<div id="controls">
+		<input type="file" id="loadFile" name="file"/>
+		<output id="list"></output>
+
+		<label>Grid name</label>
+		<input type="text" id="fileName"/>
 		<label>rotation</label>
 		<input type="range" id="rotationSlider"/>
 		<label>scale</label>
 		<input type="range" id="scaleSlider"/>
 		<button id="toggleMode">toggle mode</button>
+		<button id="crop">crop tiles</button>
+		<button id="previewTile">preview tile</button>
 		<button id="saveTile">save tile</button>
+
 	</div>
-	<a id="downloadAnchorElem" style="display:none"></a>
 </body>
 </html>
