started cmmenting code - up to bounding box class

--- a/index.html
+++ b/index.html
@@ -8,22 +8,7 @@
 </head>
 
 <body>
-	<div id="canvas_container"></div>
-	<div id="controls">
-		<input type="file" id="loadFile" name="file"/>
-		<output id="list"></output>
-
-		<label>Grid name</label>
-		<input type="text" id="fileName"/>
-		<label>rotation</label>
-		<input type="range" id="rotationSlider"/>
-		<label>scale</label>
-		<input type="range" id="scaleSlider"/>
-		<button id="toggleMode">toggle mode</button>
-		<button id="crop">crop tiles</button>
-		<button id="previewTile">preview tile</button>
-		<button id="saveTile">save tile</button>
-
-	</div>
+	<a href="./patternBuilder.html">Pattern Builder</a>
+	<a href="./gridBuilder.html">Grid Builder</a>
 </body>
 </html>
