patternbuilder and gridbuilder are now both compiled to the same script

--- a/patternBuilder.html
+++ b/patternBuilder.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <script language="javascript" type="text/javascript" src="catseye-pattern-builder.bundle.js"></script>
+  <script language="javascript" type="text/javascript" src="catseye.bundle.js"></script>
   <link rel="stylesheet" type="text/css" href="./css/catseye.css">
   <link rel="stylesheet" type="text/css" href="./css/patternBuilder.css">
   <!-- this line removes any default padding and style. you might only need one of these values set. -->
@@ -50,7 +50,10 @@
         </div>
       </div>
     </section>
-    <section id="preview">
+    <section id="catseye-main">
     </section>
+    <script type="text/javascript">
+      catseye.patternBuilder();
+    </script>
 </body>
 </html>
