--- a/gridBuilder.html
+++ b/gridBuilder.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <script language="javascript" type="text/javascript" src="catseye-grid-builder.bundle.js"></script>
+  <script language="javascript" type="text/javascript" src="catseye.bundle.js"></script>
   <link rel="stylesheet" type="text/css" href="./css/catseye.css">
   <link rel="stylesheet" type="text/css" href="./css/gridBuilder.css">
   <!-- this line removes any default padding and style. you might only need one of these values set. -->
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-	<div id="canvas_container"></div>
+	<div id="catseye-main"></div>
 
 	<div id="controls">
 		<input type="file" id="loadFile" name="file"/>
@@ -25,6 +25,8 @@
 		<button id="previewTile">preview tile</button>
 		<button id="saveTile">save tile</button>
 	</div>
-	
+	<script type="text/javascript">
+		catseye.gridBuilder();
+	</script>
 </body>
 </html>
