--- a/patternBuilder.html
+++ b/patternBuilder.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <script language="javascript" type="text/javascript" src="node_modules/gl-matrix/dist/gl-matrix.js"></script>
   <script language="javascript" type="text/javascript" src="catseye.bundle.js"></script>
   <link rel="stylesheet" type="text/css" href="./css/catseye.css">
   <link rel="stylesheet" type="text/css" href="./css/patternBuilder.css">
@@ -14,6 +15,7 @@
       <div id="image-inputs">
        
         <button id="load-image">Load Image</button>
+        <button id="load-grid">Load Grid</button>
         <button id="save-tile" disabled>Save Tile</button>
        
         <div id="save-image-group" class="group">
@@ -46,8 +48,7 @@
           <button id="toggle-grid">Show Grid</button>
           <div class="labelled">
             <label for="tile-scale">Tile Scale</label>
-            <input id="tile-scale" class="dimension"
-                   type="number" min="1" value="100">
+            <input id="tile-scale" type="range">
             <label for="tile-scale">%</label>
           </div>
           <button id="tile-reset">Reset</button>
