Webgl refactor completed and functioning, file loader bugs fixed

--- a/patternBuilder.html
+++ b/patternBuilder.html
@@ -8,8 +8,7 @@
   <style> body {padding: 0; margin: 0;} </style>
 </head>
 
-<body>
-  <body>
+<body id="body">
     <section id="interface">
       <div id="image-inputs">
        
