polygon edge normalization, bugs fixed

--- a/patternBuilder.html
+++ b/patternBuilder.html
@@ -24,8 +24,8 @@
           <label for="tile-scale">Scale</label>
           <input id="tile-scale-slider" type="range">
           <input id="tile-scale-box" type="number">
-          <input type="checkbox" id="toggle-grid"/>
           <label for="toggle-grid">Show Grid</label>
+          <input type="checkbox" id="toggle-grid"/>
         </div>
 
         <div class="labelled percent50">
@@ -48,6 +48,7 @@
       </div>
       
       <button id="reset" class="percent50">RESET</button>
+      <button id="clear-storage" class="percent50">DELETE EVERYTHING</button>
 
       <div id="grid-selection">
 
