cosmetic additions, bug fixes, custom grid delete buttons

--- a/gridBuilder.html
+++ b/gridBuilder.html
@@ -11,7 +11,7 @@
 <body>
 	<div id="catseye-main"></div>
 
-	<div id="controls">
+	<div id="interface">
 		<input type="file" id="loadFile" name="file"/>
 		<output id="list"></output>
 		<label>Grid name</label>
@@ -24,6 +24,7 @@
 		<button id="crop">crop tiles</button>
 		<button id="previewTile">preview tile</button>
 		<button id="saveTile">save tile</button>
+		<button id="saveTileImage">save tile image</button>
 	</div>
 	<script type="text/javascript">
 		catseye.gridBuilder();
