--- a/gridBuilder.html
+++ b/gridBuilder.html
@@ -12,19 +12,33 @@
 	<div id="catseye-main"></div>
 
 	<div id="interface">
-		<input type="file" id="loadFile" name="file"/>
-		<output id="list"></output>
-		<label>Grid name</label>
-		<input type="text" id="fileName"/>
-		<label>rotation</label>
-		<input type="range" id="rotationSlider"/>
-		<label>scale</label>
-		<input type="range" id="scaleSlider"/>
-		<button id="toggleMode">toggle mode</button>
-		<button id="crop">crop tiles</button>
-		<button id="previewTile">preview tile</button>
-		<button id="saveTile">save tile</button>
-		<button id="saveTileImage">save tile image</button>
+		
+		<div class="labelled percent100">
+			<button id="loadGrid" class="percent50">Load Grid</button>
+		</div>
+		
+		<div class="labelled percent100">
+			<label>Grid name</label>
+			<input type="text" id="fileName" value="catseye grid"/>
+		</div>
+		
+		<div class="labelled percent100">
+			<label>rotation</label>
+			<input type="range" id="rotationSlider" class="percent100"/>
+		</div>
+		
+		<div class="labelled percent100">
+			<label>scale</label>
+			<input type="range" id="scaleSlider" class="percent100"/>
+		</div>
+
+		<div class="labelled">
+			<button id="toggleMode" class="percent100">toggle mode</button>
+			<button id="crop">crop tiles</button>
+			<button id="previewTile" class="right">preview tile</button>
+			<button id="saveTile">save tile</button>
+			<button id="saveTileImage" class="right">save tile image</button>
+		</div>
 	</div>
 	<script type="text/javascript">
 		catseye.gridBuilder();
