--- a/patternBuilder.html
+++ b/patternBuilder.html
@@ -48,13 +48,13 @@
             <option value="png">PNG</option>
             <option value="jpeg">JPEG</option>
           </select>
-          <button id="save-image" >Save Image</button>
+          <button id="save-image" class="left">Save Image</button>
           <button id="save-tile" class="right">Save Tile</button>
         </div>
 
       </div>
       
-      <button id="reset">RESET</button>
+      <button id="reset" class="left">RESET</button>
       <button id="clear-storage" class="right">DELETE ALL</button>
 
       <ul>  
