refactored gridStorage, added default cutom grids

--- a/patternBuilder.html
+++ b/patternBuilder.html
@@ -12,7 +12,7 @@
     <section id="interface" class="noSelect">
       <div id="image-inputs">
        
-        <button id="load-image" >Load Image</button>
+        <button id="load-image" class = "left">Load Image</button>
         <button id="load-grid" class="right">Load Grid</button>  
        
       <div id="image-selection">
